# psysinfo

./: Cargo.toml  README.md  main.rs
.github/workflows/: rust.yml
