[package]
name = "psysinfo"
version = "0.1.0"
authors = ["amberisvibin"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "psysinfo is a simple CLI utility that prints the sysinfo crate's (static) info, written in Rust."
homepage = "https://github.com/amberisvibin/psysinfo"
repository = "https://github.com/amberisvibin/psysinfo"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.15.1"
colored = "2.0.0"

[[bin]]
name = "psysinfo"
path = "main.rs"
